<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/main_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/reg_cards_elevation"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/card_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.soujuw.android.partner.Views.CellphoneEdit
                android:id="@+id/edit_register_cellphone"
                style="@style/LoginCardsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_register_cellphone"
                app:met_iconLeft="@drawable/ic_phone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.soujuw.android.partner.Views.VerifyCodeEdit
                    android:id="@+id/edit_register_verify"
                    style="@style/LoginCardsEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_register_verify_code"
                    app:met_iconLeft="@drawable/ic_shield"
                    app:met_maxCharacters="6" />

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <com.soujuw.android.partner.Views.XFlatButton
                        android:id="@+id/action_register_get_verify"
                        style="@style/Ripple.FlatButton.Secondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_get_verify_code"
                        android:textSize="14sp" />
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <com.soujuw.android.partner.Views.PasswordEdit
                android:id="@+id/edit_register_password"
                style="@style/LoginCardsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_register_password"
                android:inputType="textPassword"
                app:met_iconLeft="@drawable/ic_lock_outline" />

            <com.soujuw.android.partner.Views.PasswordEdit
                android:id="@+id/edit_register_confirmpw"
                style="@style/LoginCardsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_register_confirm_password"
                android:inputType="textPassword"
                app:met_iconLeft="@drawable/ic_lock" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <com.soujuw.android.partner.Views.XFlatButton
                        android:id="@+id/action_register_switch_login"
                        style="@style/Ripple.FlatButton.Secondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_switch_to_login" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <com.soujuw.android.partner.Views.XFlatButton
                        android:id="@+id/action_register_submit"
                        style="@style/Ripple.FlatButton.Primary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/btn_partner_register" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <com.soujuw.android.partner.Views.XFlatButton
                        android:id="@+id/action_register_switch_retrive"
                        style="@style/Ripple.FlatButton.Secondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_retrieve_password" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <com.soujuw.android.partner.Views.TrademarkFooterLarge
        android:layout_width="match_parent"
        android:layout_height="match_parent"></com.soujuw.android.partner.Views.TrademarkFooterLarge>
</LinearLayout>
